# derstakip

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/: routes.py
app/domain/: models.py  risk.py
app/domain/ds/: assignment_heap.py  linked_list.py  prereq_graph.py  undo_stack.py
app/infrastructure/: storage.py
app/services/: scheduler.py
app/tests/: test_risk_engine.py
data/: course_catalog.json  student_1.json  student_10.json  student_2.json  student_8.json  student_9.json
docs/: risk_formula.txt
web_app/: __init__.py  api.py  forms.py
web_app/routes/: students.py
web_app/templates/: index.html  layout.html  student_detail.html
web_app/templates/forms/: add_assignment.html  add_course.html  create_student.html  edit_absence.html
